--- a/build.gradle
+++ b/build.gradle
@@ -17,7 +17,7 @@ repositories {
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-jdk8"
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    implementation 'com.github.romangraef:pluggabledino:master-SNAPSHOT'
+    implementation 'com.github.romangraef:pluggabledino:0dbfc25385'
     compile 'com.beust:klaxon:3.0.1'
     compile group: 'org.slick2d', name: 'slick2d-core', version: '1.0.2'
     compile group: 'org.jbox2d', name: 'jbox2d-library', version: '2.2.1.1'
